--- a/static/css/bootstrap-slider.css
+++ b/static/css/bootstrap-slider.css
@@ -30,7 +30,7 @@
 }
 .slider.slider-horizontal {
   vertical-align: middle;
-  width: 500px;
+  width: 280px;
   height: 20px;
 }
 .slider.slider-horizontal .slider-track {
@@ -201,8 +201,8 @@
 .slider-handle.custom::before {
   line-height: 20px;
   font-size: 20px;
-  content: '\2605';
-  color: #726204;
+  content: '\007c';
+  color: #000000;
 }
 .slider-tick {
   position: absolute;
@@ -232,10 +232,10 @@
   background: transparent none;
 }
 .slider-tick.custom::before {
-  line-height: 20px;
-  font-size: 20px;
-  content: '\2605';
-  color: #726204;
+  line-height: 10px;
+  font-size: 10px;
+  content: '\007c';
+  color: #000000;
 }
 .slider-tick.in-selection {
   background-image: -webkit-linear-gradient(top, #89cdef 0%, #81bfde 100%);
