--- a/static/css/charts.css
+++ b/static/css/charts.css
@@ -22,3 +22,16 @@
   stroke: steelblue;
   stroke-width: 1.5px;
 }
+
+
+path.slice{
+  stroke-width:2px;
+}
+
+polyline{
+  opacity: .3;
+  stroke: black;
+  stroke-width: 2px;
+  fill: none;
+}
+
