--- a/static/css/charts.css
+++ b/static/css/charts.css
@@ -25,13 +25,14 @@
 
 
 path.slice{
-  stroke-width:2px;
+  stroke-width:1px;
+  stroke: black;
 }
 
 polyline{
-  opacity: .3;
+  opacity: .5;
   stroke: black;
-  stroke-width: 2px;
+  stroke-width: 1px;
   fill: none;
 }
 
